--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,120 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+#include <Servo.h>
 
-# C extensions
-*.so
+Servo servoY;
+Servo servoX;
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+const int index_right_pin = 11;
+const int index_left_pin = 12;
+const int index_up_pin = 10;
+const int index_down_pin = 9;
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+int index_up = 0;
+int index_down = 0;
+int index_right = 0;
+int index_left = 0;
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+int directionn = 1;
+//1 = вправо
+//2 = вниз
+//3 = влево
+//4 = вверх
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+void setup() {
+  Serial.begin(9600);
+  servoY.attach(7);
+  servoX.attach(13);
+  pinMode(index_up_pin, INPUT);
+  pinMode(index_down_pin, INPUT);
+  pinMode(index_left_pin, INPUT);
+  pinMode(index_right_pin, INPUT);
 
-# Translations
-*.mo
-*.pot
+  //index_up = digitalRead(index_up_pin);
+  //index_down = digitalRead(index_down_pin);
+  //index_left = digitalRead(index_left_pin);
+  //index_right = digitalRead(index_right_pin);
+}
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+void loop() {
+  
+  digitalWrite(index_up_pin, HIGH);
+  digitalWrite(index_down_pin, HIGH);
+  digitalWrite(index_left_pin, HIGH);
+  digitalWrite(index_right_pin, HIGH);
+  
+  index_up = digitalRead(index_up_pin);
+  index_down = digitalRead(index_down_pin);
+  index_left = digitalRead(index_left_pin);
+  index_right = digitalRead(index_right_pin);
 
-# Flask stuff:
-instance/
-.webassets-cache
+if (directionn == 1){
+  Serial.print("directionn = ");
+Serial.println(directionn);
+    if (index_right == HIGH){
+  servoX.writeMicroseconds(1800);
+  servoY.writeMicroseconds(1500);
+  //Serial.println("HIGH");
+    }
+    if (index_right != HIGH){
+      //directionn++;
+      //Serial.println("NOT HIGH");
+      servoX.writeMicroseconds(1500);
+      directionn++;
+    }
+    //delay(100);
+}
 
-# Scrapy stuff:
-.scrapy
+if (directionn == 2){
+  Serial.print("directionn = ");
+Serial.println(directionn);
+    if (index_down == HIGH){
+  servoY.writeMicroseconds(1200);
+  servoX.writeMicroseconds(1500);
+    }
+    if (index_down != HIGH){
+      //directionn++;
+      servoY.writeMicroseconds(1500);
+      directionn++;
+    }
+    //delay(100);
+}
 
-# Sphinx documentation
-docs/_build/
+if (directionn == 3){
+  Serial.print("directionn = ");
+Serial.println(directionn);
+    if (index_left == HIGH){
+  servoX.writeMicroseconds(1200);
+  servoY.writeMicroseconds(1500);
+    }
+    if (index_left != HIGH){
+      //directionn++;
+      servoX.writeMicroseconds(1500);
+      directionn++;
+    }
+    //delay(100);
+}
 
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+if (directionn == 4){
+  Serial.print("directionn = ");
+Serial.println(directionn);
+    if (index_up == HIGH){
+  servoY.writeMicroseconds(1800);
+  servoX.writeMicroseconds(1500);
+  //Serial.println("UP NOT PRESSED");
+    }
+    if (index_up != HIGH){
+      servoY.writeMicroseconds(1500);
+      directionn++;
+      //Serial.println("UP PRESSED");
+    }
+    //delay(100);
+}
+if (directionn > 4){
+  //Serial.println("full circle");
+  directionn = 1;
+  //delay(50);
+}
+//delay(100);
+//Serial.print("directionn = ");
+//Serial.println(directionn);
+  //delay(1000);
+}
